# recordersync

./: .gitignore  Brewfile  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONCEPT.md  HANDOFF.md  OPERATIONS.md  REPORT_SCHEMA.md  TESTING.md
docs/design/: architecture.md
docs/development/: testing.md
docs/operations/: guide.md  releasing.md
docs/product/: concept.md
docs/project/: changelog.md  handoff.md
docs/reference/: report-schema.md
recordersync/: __init__.py  __main__.py  analysis_plan.py  api.py  cli.py  matching.py  media.py  models.py  pipeline.py  recommendation.py  render.py  report.py  sessions.py
schemas/: recordersync-report-v2.schema.json
scripts/: benchmark_matcher.py  check.sh  check_markdown_links.py  check_pr_title.py  check_release_version.py  format.sh  hook-helpers.sh  install-hooks.sh  pre-commit  pre-push  test-e2e.sh
tests/e2e/: __init__.py  conftest.py  test_cli_pipeline.py
tests/unit/: test_analysis_plan.py  test_api.py  test_check_markdown_links.py  test_check_release_version.py  test_cli.py  test_matching.py  test_media.py  test_models.py  test_pipeline.py  test_pr_title.py  test_recommendation.py  test_render.py  test_report.py  test_report_json_schema.py  test_sessions.py
