[project]
name = "recordersync"
version = "0.3.0"
description = "Match split recorder audio to camera clips and replace their audio"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Donggeun Lee", email = "i@dizy.me" }]
dependencies = [
    "numpy>=2.4,<3",
    "scipy>=1.18,<2",
]

[project.scripts]
recordersync = "recordersync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"schemas/recordersync-report-v2.schema.json" = "recordersync/schemas/recordersync-report-v2.schema.json"

[dependency-groups]
dev = [
    "jsonschema>=4.26,<5",
    "mypy>=1.19",
    "pip-audit>=2.10",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "radon>=6.0",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=recordersync --cov-report=term-missing"
markers = ["e2e: 실제 FFmpeg와 CLI를 사용하는 합성 미디어 통합 테스트"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "PTH", "RUF"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "S101", "S108"]
